Multiple fixes and updates