@@ -5,9 +5,11 @@ import org.json.JSONObject;
 
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
+import java.util.function.Supplier;
 
 public class HttpHelper {
     public static class URLs{
@@ -26,62 +28,86 @@ public class HttpHelper {
         public static String user  = client+"user/";
         public static String upload = media+"upload/";
     }
-    private String access_token;
 
-    public void setAccess_token(String access_token) {
-        this.access_token = access_token;
-    }
+	public HttpHelper(Supplier<String> accessTokenSupplier) {
+		this.accessTokenSupplier = accessTokenSupplier;
+	}
+
+	private Supplier<String> accessTokenSupplier;
 
     public String sendRequest(String host, String path, JSONObject data, boolean useAccesstoken, String requestMethod) throws IOException {
-        String surl = host+path + (useAccesstoken ? "?access_token="+access_token  : "");
-        /*if(!path.contains("sync")){
-            System.out.println(surl);
-        }*/
-        URL obj = new URL(surl);
-        URLConnection con = obj.openConnection();
-        HttpURLConnection http = (HttpURLConnection)con;
-        http.setRequestMethod(requestMethod);
-        http.setDoOutput(true);
-        http.setReadTimeout(60000);
+		return sendRequest(host, path, data, useAccesstoken, requestMethod, false);
+	}
 
-        if(data != null){
-            int length = data.toString().length();
-            http.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
-        }
+	public String sendRequest(String host, String path, JSONObject data, boolean useAccesstoken, String requestMethod,
+			boolean throwAll) throws IOException {
 
-        http.connect();
+		URL obj = URI.create(host + path).toURL();
+		URLConnection con = obj.openConnection();
 
-        if(data != null){
-            try(OutputStream os = http.getOutputStream()) {
-                os.write(data.toString().getBytes());
-            }
-        }
+		HttpURLConnection http = (HttpURLConnection) con;
+		http.setRequestMethod(requestMethod);
+		http.setDoOutput(true);
+		http.setReadTimeout(60000);
 
-        try(BufferedReader br = new BufferedReader(new InputStreamReader(con.getInputStream(), StandardCharsets.UTF_8))) {
-            StringBuilder response = new StringBuilder();
-            String responseLine = null;
-            while ((responseLine = br.readLine()) != null) {
-                response.append(responseLine.trim());
-            }
-            return response.toString();
-        }catch (IOException e){
-            return "{\n" +
-                    "  \"response\":\"error\",\n" +
-                    "  \"code\":"+http.getResponseCode()+"\n" +
-                    "}";
-        }
+		if (useAccesstoken) {
+			http.setRequestProperty("Authorization", "Bearer " + accessTokenSupplier.get());
+		}
+
+		if (data != null) {
+			int length = data.toString().length();
+			http.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
+		}
+
+		http.connect();
+
+		if (data != null) {
+			try (OutputStream os = http.getOutputStream()) {
+				os.write(data.toString().getBytes());
+			}
+		}
+
+		try (BufferedReader br = new BufferedReader(
+				new InputStreamReader(con.getInputStream(), StandardCharsets.UTF_8))) {
+			StringBuilder response = new StringBuilder();
+			String responseLine = null;
+			while ((responseLine = br.readLine()) != null) {
+				response.append(responseLine.trim());
+			}
+			return response.toString();
+		} catch (IOException e) {
+
+			String errorResponse = null;
+			InputStream errorStream = http.getErrorStream();
+			if (errorStream != null) {
+				try (BufferedReader br = new BufferedReader(new InputStreamReader(errorStream))) {
+					StringBuilder response = new StringBuilder();
+					String responseLine = null;
+					while ((responseLine = br.readLine()) != null) {
+						response.append(responseLine.trim());
+					}
+					errorResponse = response.toString();
+				}
+			}
+			if (throwAll) {
+				throw new IOException(errorResponse, e);
+			}
+			return "{\n" + "  \"response\":\"error\",\n" + "  \"code\":" + http.getResponseCode() + "\n" + "}";
+		}
     }
 
     public String sendStream(String host, String path, String contentType, InputStream data, int contentLength, boolean useAccesstoken, String requestMethod) throws IOException {
-        String surl = host+path + (useAccesstoken ? "?access_token="+access_token  : "");
-
-        URL obj = new URL(surl);
+		URL obj = URI.create(host + path).toURL();
         URLConnection con = obj.openConnection();
         HttpURLConnection http = (HttpURLConnection)con;
         http.setRequestMethod(requestMethod);
         http.setDoOutput(true);
         http.setRequestProperty("Content-Type", contentType);
         http.addRequestProperty("Content-Length", Integer.toString(contentLength));
+
+		if (useAccesstoken) {
+			http.setRequestProperty("Authorization", "Bearer " + accessTokenSupplier.get());
+		}
 
         try(OutputStream os = http.getOutputStream()) {
             int i = 0;
@@ -130,11 +156,11 @@ public class HttpHelper {
     }
 
     public void sendRequestAsync(String host, String path, JSONObject data, DataCallback callback) throws IOException {
-        sendRequestAsync(host, path, data, callback, access_token != null, "POST");
+		sendRequestAsync(host, path, data, callback, accessTokenSupplier.get() != null, "POST");
     }
 
     public void sendRequestAsync(String host, String path, JSONObject data, String requestMethd, DataCallback callback) throws IOException {
-        sendRequestAsync(host, path, data, callback, access_token != null, requestMethd);
+		sendRequestAsync(host, path, data, callback, accessTokenSupplier.get() != null, requestMethd);
     }
 
     public void sendRequestAsync(String host, String path, JSONObject data, DataCallback callback, boolean useAccesstoken, String requestMethod) throws IOException {
